fixing calendar overlap

--- a/_attachments/style/tdhgeneral.css
+++ b/_attachments/style/tdhgeneral.css
@@ -576,7 +576,7 @@ div#dancesCal {
 }
 
 div#dancesCal div {
-	width: 22.5em;
+	/*width: 22.5em;*/
 }
 
 div#dancesMap {
